--- a/RNN_Experiments.ipynb
+++ b/RNN_Experiments.ipynb
@@ -70,31 +70,16 @@
    "id": "7c2356dd",
    "metadata": {},
    "source": [
-    "## 4. Run Single Task Experiment (FlipFlop)"
+    "## 4. Multi-Task Comparison\n",
+    "\n",
+    "Train RNNs on 4 different tasks (FlipFlop, Cycling, Context, MNIST) and compare unit type distributions.\n",
+    "Demonstrates task-specific functional specialization."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "0ad9c3d1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!python scripts/test_rnn.py --task flipflop --architecture vanilla --hidden-size 128 --epochs 2000"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f4ba8ae4",
-   "metadata": {},
-   "source": [
-    "## 5. Run Multi-Task Comparison"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "170cabd7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +91,14 @@
    "id": "27713583",
    "metadata": {},
    "source": [
-    "## 6. Run Robustness Tests"
+    "## 5. Statistical Validation & Advanced Analysis\n",
+    "\n",
+    "Comprehensive statistical tests including:\n",
+    "- Statistical significance (paired t-tests, bootstrap CI, permutation tests)\n",
+    "- Advanced baseline comparison (TDR, selectivity-based methods)\n",
+    "- Component ablation study (rotation/contraction/expansion contributions)\n",
+    "\n",
+    "Runs on multiple tasks with multiple random seeds for publication-quality rigor."
    ]
   },
   {
@@ -116,7 +108,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python scripts/test_rnn_robustness.py"
+    "!python scripts/test_comprehensive_analysis.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c516f7cf",
+   "metadata": {},
+   "source": [
+    "## 6. Network Pruning Analysis\n",
+    "\n",
+    "Test functional importance of unit types by removing specific clusters.\n",
+    "Demonstrates practical application for network compression and interpretability."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e33080c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python scripts/test_pruning.py"
    ]
   }
  ],
