--- a/RNN_Experiments.ipynb
+++ b/RNN_Experiments.ipynb
@@ -25,8 +25,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!git clone https://github.com/YOUR_USERNAME/flowy-neuron-id.git\n",
-    "%cd flowy-neuron-id"
+    "!git clone https://github.com/jacobposchl/neuronal-identifiability\n",
+    "%cd neuronal-identifiability"
    ]
   },
   {
