fixed cluster debug

--- a/notebooks/RNN_Experiments.ipynb
+++ b/notebooks/RNN_Experiments.ipynb
@@ -137,11 +137,11 @@
     "# 1. Unit type importance (ablate each type, measure performance drop)\n",
     "!python experiments/rnn/perturbation_experiments.py --experiment importance --task context --epochs 2000\n",
     "\n",
-    "# 2. Cross-task transfer (do \"Integrators\" from Context also matter for Parametric memory?)\n",
+    "# 2. Cross-task transfer (do \"Integrators\" from FlipFlop also matter for Cycling memory?)\n",
     "print(\"\\n\" + \"=\"*70)\n",
     "print(\"Cross-task transfer test...\")\n",
     "print(\"=\"*70)\n",
-    "!python experiments/rnn/perturbation_experiments.py --experiment transfer --task context --task-b parametric --epochs 2000\n",
+    "!python experiments/rnn/perturbation_experiments.py --experiment transfer --task flipflop --task-b cycling --epochs 2000\n",
     "\n",
     "# 3. Progressive ablation (low-confidence first vs high-confidence first vs random)\n",
     "print(\"\\n\" + \"=\"*70)\n",
@@ -374,7 +374,7 @@
     "\n",
     "# Phase 2: Perturbation analysis\n",
     "python experiments/rnn/perturbation_experiments.py --experiment importance --task context\n",
-    "python experiments/rnn/perturbation_experiments.py --experiment transfer --task context --task-b parametric\n",
+    "python experiments/rnn/perturbation_experiments.py --experiment transfer --task flipflop --task-b cycling\n",
     "python experiments/rnn/perturbation_experiments.py --experiment progressive --task context\n",
     "python experiments/rnn/perturbation_experiments.py --experiment compression --task context\n",
     "\n",
