fixed cluster debug

--- a/notebooks/RNN_Experiments.ipynb
+++ b/notebooks/RNN_Experiments.ipynb
@@ -119,10 +119,13 @@
     "\n",
     "**Purpose:** Prove classifications are functionally meaningful, not arbitrary clustering artifacts.\n",
     "\n",
-    "Tests three critical predictions:\n",
+    "Tests critical predictions:\n",
     "1. **Unit Type Importance:** Ablating \"Integrators\" should hurt integration tasks more than oscillation tasks\n",
-    "2. **Cross-Task Transfer:** Units classified as \"Integrators\" on Context should also matter for other integration tasks\n",
+    "2. **Cross-Task Transfer:** Do units classified on one task also matter for similar tasks? (Auto-adjusts task parameters for compatibility)\n",
     "3. **Confidence-Guided Pruning:** Low-confidence \"Mixed\" units can be removed with minimal performance loss\n",
+    "4. **Progressive Ablation:** Different ablation strategies show different performance curves\n",
+    "\n",
+    "**Note:** Cross-task transfer automatically adjusts task parameters when needed (e.g., Context(n_contexts=1) to match Parametric dimensions).\n",
     "\n",
     "**Expected outcome:** Functional dissociation (Integrators ≠ Rotators in ablation profile)"
    ]
@@ -137,11 +140,12 @@
     "# 1. Unit type importance (ablate each type, measure performance drop)\n",
     "!python experiments/rnn/perturbation_experiments.py --experiment importance --task context --epochs 2000\n",
     "\n",
-    "# 2. Cross-task transfer (do \"Integrators\" from FlipFlop also matter for Cycling memory?)\n",
+    "# 2. Cross-task transfer (do units from Context also matter for Parametric?)\n",
+    "# NOTE: Tasks will be auto-adjusted for compatibility (Context(n_contexts=1) + Parametric)\n",
     "print(\"\\n\" + \"=\"*70)\n",
     "print(\"Cross-task transfer test...\")\n",
     "print(\"=\"*70)\n",
-    "!python experiments/rnn/perturbation_experiments.py --experiment transfer --task flipflop --task-b cycling --epochs 2000\n",
+    "!python experiments/rnn/perturbation_experiments.py --experiment transfer --task context --task-b parametric --epochs 2000\n",
     "\n",
     "# 3. Progressive ablation (low-confidence first vs high-confidence first vs random)\n",
     "print(\"\\n\" + \"=\"*70)\n",
@@ -374,7 +378,7 @@
     "\n",
     "# Phase 2: Perturbation analysis\n",
     "python experiments/rnn/perturbation_experiments.py --experiment importance --task context\n",
-    "python experiments/rnn/perturbation_experiments.py --experiment transfer --task flipflop --task-b cycling\n",
+    "python experiments/rnn/perturbation_experiments.py --experiment transfer --task context --task-b parametric  # Auto-adjusted\n",
     "python experiments/rnn/perturbation_experiments.py --experiment progressive --task context\n",
     "python experiments/rnn/perturbation_experiments.py --experiment compression --task context\n",
     "\n",
